public/homeScreen/style.css
* {
    box-sizing: border-box;
    cursor: none;
    margin: 0;
}

html, body {
    margin: 0px;
    padding: 0px;
    font-family: "Cousine";
    background-color: rgb(255, 255, 255);
    display: block;
}

h1 {
    text-align: center;
    font-family: 'Josefin Sans';
    vertical-align: top;
}

.title {
    margin:0;
    font-size: clamp(8rem, 12vw, 20rem);
    color: rgb(0, 0, 0);
    animation-name: quickfade;
    animation-duration: 1s;
    animation-iteration-count: 1;
}

section {
    height: 90vh;
    width: 100%;
    padding: 0 clamp(6rem, 14vw, 22rem);
    display: block;
    align-content: center;
    
    h2 {
        font-size: clamp(3rem, 5vw, 9rem);
        padding: 0;
    }

    p {
        font-size: clamp(1rem, 2vw, 4rem);
        padding:0;
        margin: 0;
    }

    &:nth-of-type(1) {
        height: 85vh;
        background-color: white;
        background-image: url("../assets/logobg3.png");
        background-size: cover;
        color: black;
    }
    &:nth-of-type(2) {
        background-color: black;
        color: white;
    }
    &:nth-of-type(3) {
        border-bottom: 1px solid black;
    }
    &:nth-of-type(5) {
        background-color: rgb(65, 201, 106);
        color: black;
    }
    &:nth-of-type(6) {
        background-color: rgb(26, 39, 33);
        color: white;
    }
}

.bottomtab {
    display: block;
    background-color: black;
    color: white;
    text-align: center;
    padding-top: clamp(1rem, 25px, 4rem);
    border-top-left-radius: clamp(3rem, 5vw, 9rem);
    border-top-right-radius: clamp(3rem, 5vw, 9rem);
    width: 100%;
    height: clamp(3rem, 5vw, 9rem);
}

.logospace {
    color: white;
    display: inline-block;
    padding-left: clamp(0%, 25%, 30%);
    padding-right: clamp(0%, 25%, 30%);
}

header {
    position: sticky;
    top: 0;
    animation-name: quickfade;
    animation-duration: 3s;
    animation-iteration-count: 1;
}

nav {
    text-align: center;
    width: 100%
}

nav ul {
    background-color: rgb(255, 255, 255);
    font-size: 20px;
    padding-left: 0;
    border-bottom: 1px black solid;
}

ul {
    list-style-type: none;
    margin: 0px;
    overflow: hidden;
    text-align: center
}

nav ul:hover {
    cursor: auto;
}

nav img:hover {
    cursor: pointer;
}

ul li {
    display: inline;
}

ul li a {
    display: inline-block;
    padding: 20px;
    text-align: center;
    margin: 0px;
}

nav a {
    font-family: "Courier New";
    text-decoration: none;
    background-color: inherit;
    color: rgb(0, 0, 0);
}

nav a:hover {
    text-decoration: underline;
    cursor: pointer;
}

.blob {
    background-color: black;
    border-radius: 100%;
    border: 1px solid white;
    opacity: 1;
    position:absolute;
    z-index: 9999;
    width: 30px;
    height: 30px;
    pointer-events: none;
    display: block;
}

.mouse {
    mix-blend-mode: difference;
    display: block;
    top: 0;
    left: 0;
    z-index: 9999;
}

/*

ANIMATIONS

*/

@keyframes fade {
    0% {opacity: 0;}
    100% {opacity: 1;}
}

@keyframes quickfade {
    0% {opacity: 0;}
    50% {opacity: 0;}
    100% {opacity: 1;}
}

@keyframes blink {
    50% { opacity: 0; }
}

/*

CUSTOM FONTS
<weight>: Use a value from 100 to 700 

*/

.josefin-sans-font {
  font-family: "Josefin Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 400;
  font-style: normal;
}

.rubik-mono-one-regular {
    font-family: "Rubik Mono One", monospace;
    font-weight: 400;
    font-style: normal;
}

.cousine-regular {
    font-family: "Cousine", monospace;
    font-weight: 400;
    font-style: normal;
}
  
.cousine-bold {
    font-family: "Cousine", monospace;
    font-weight: 700;
    font-style: normal;
}
  
.cousine-regular-italic {
    font-family: "Cousine", monospace;
    font-weight: 400;
    font-style: italic;
}
  
.cousine-bold-italic {
    font-family: "Cousine", monospace;
    font-weight: 700;
    font-style: italic;
}

